[gd_scene load_steps=16 format=3 uid="uid://cng1hdh4kuxrw"]

[ext_resource type="Script" uid="uid://bvnk4w5l7f20d" path="res://scenes/player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://diodhnq0m3c2v" path="res://assets/player.png" id="2_ur7pv"]
[ext_resource type="PackedScene" uid="uid://bt83ghg2tyrgw" path="res://scenes/systems/weapons/weapon_system.tscn" id="3_dqkch"]
[ext_resource type="PackedScene" uid="uid://cfr6dshc1ngsh" path="res://scenes/systems/weapons/cannon/basic_bullet.tscn" id="4_fjrip"]
[ext_resource type="PackedScene" uid="uid://b5k51vab0hjpc" path="res://scenes/systems/modules/module_system.tscn" id="4_qlg0r"]
[ext_resource type="PackedScene" uid="uid://ckkccjr144hjs" path="res://scenes/systems/power/power_system.tscn" id="5_qlg0r"]
[ext_resource type="Script" uid="uid://ci7we2a0ieoim" path="res://scenes/systems/weapons/cannon/cannon_weapon.gd" id="5_smehm"]
[ext_resource type="Script" path="res://scenes/systems/weapons/weapon_insertion_system.gd" id="6_ur7pv"]
[ext_resource type="Script" uid="uid://do58sux7hyofl" path="res://scenes/systems/modules/module_insertion_system.gd" id="7_smehm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_ur7pv")
region = Rect2(0, 0, 43, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_ur7pv")
region = Rect2(43, 0, 43, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_ur7pv")
region = Rect2(86, 0, 43, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qhqgy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_ur7pv"]
points = PackedVector2Array(0, -25, 25, 5, 25, 17, -25, 17, -25, 5)

[sub_resource type="Resource" id="Resource_ur7pv"]
script = ExtResource("5_smehm")
base_damage = 10.0
metadata/_custom_type_script = "uid://ci7we2a0ieoim"

[node name="Player" type="Area2D" groups=["player"]]
script = ExtResource("1_3vyb7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 4)
scale = Vector2(1.2988281, 1.2988281)
sprite_frames = SubResource("SpriteFrames_qhqgy")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("ConvexPolygonShape2D_ur7pv")

[node name="Systems" type="Node" parent="."]

[node name="WeaponSystem" parent="Systems" node_paths=PackedStringArray("module_system") instance=ExtResource("3_dqkch")]
belongs_to_player = true
current_weapon = SubResource("Resource_ur7pv")
module_system = NodePath("../ModuleSystem")

[node name="WeaponInsertionSystem" type="Node" parent="Systems" node_paths=PackedStringArray("weapon_system")]
script = ExtResource("6_ur7pv")
weapon_system = NodePath("../WeaponSystem")

[node name="ModuleSystem" parent="Systems" node_paths=PackedStringArray("power_system") instance=ExtResource("4_qlg0r")]
power_system = NodePath("../PowerSystem")

[node name="ModuleInsertionSystem" type="Node" parent="Systems" node_paths=PackedStringArray("module_system")]
script = ExtResource("7_smehm")
module_system = NodePath("../ModuleSystem")

[node name="PowerSystem" parent="Systems" instance=ExtResource("5_qlg0r")]
